Migrated CLI framework code to the metaschema-java project. Moved metaschema commands to the metaschema-java project.